# valsoray.dev

./: .editorconfig  Cargo.toml  Dockerfile  README.md
assets/: index.html  rickroll.html  style.css
src/: main.rs
