[package]
name = "valsoray-dev"
version = "0.1.0"
edition = "2024"
authors = ["valsoray-dev"]
license = "MIT"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
actix-files = "0.6"
actix-web = { version = "4.11", default-features = false, features = [
    "compress-brotli",
    "compress-gzip",
    "compress-zstd",
    "macros",
] }
dotenvy = "0.15"
log = "0.4"
pretty_env_logger = "0.5"
